{
    "name": "TestingHold",
    "maps": [
        {
            "name": "Test1",
            "id": "8576050f-e31d-428a-80c7-76e7203e028d",
            "actions": [
                {
                    "name": "HoldAction",
                    "type": "Button",
                    "id": "59e45da6-fa7b-49c2-a9e3-4feb0b85bf64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.5)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ebdc7c3-032e-4ff8-9911-37aed033ef18",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}